Disable keyboard monitoring only if it's enabled.

AudioInputController unconditionally calls
UserInputMonitor::DisableKeyPressMonitoring when closing, but only calls
EnableKeyPressMonitoring when Record is called. This leads to a
messed-up reference count in UserInputMonitor if we close a stream
without first starting it.

Bug: 764656
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id85c5c2d26d2745588d8c6cc7c4555adddb9c2f2
Reviewed-on: https://chromium-review.googlesource.com/664577
Reviewed-by: Olga Sharonova <olka@chromium.org>
Commit-Queue: Max Morin <maxmorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501598}